# elephant

./: .gitignore  .gitmodules  README.md  go.mod
lsm/: README.md  db  pyproject.toml
lsm/src/lsm/: __init__.py  compressor.py  file_based.py  interface.py  memory.py  test_compressor.py  test_file_based.py  test_memory.py
nosql/: CMakeLists.txt  data_access_layer.cpp  data_access_layer.hpp  data_access_layer_test.cpp  freelist.cpp  freelist.hpp  freelist_test.cpp  main.cpp  meta.cpp  meta.hpp  meta_test.cpp  page.cpp  page.hpp  readme.md
nosql/src/: data_access_layer.cpp  data_access_layer.hpp  data_access_layer_test.cpp  freelist.cpp  freelist_test.cpp  item.cpp  item.hpp  item_test.cpp  main.cpp  meta.cpp  meta.hpp  node.cpp  node.hpp  node_test.cpp  options.cpp  options.hpp  page.cpp  page.hpp
sql/: readme.md
sql/errs/: err.go
sql/storage/: init.go  node.go  tree.go  util.go
