[project]
name = "lsm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hangyudu", email = "hangyudu@tencent.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
lsm = "lsm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
